@@ -1,3 +1,7 @@
+2002-10-19  Masayuki Ataka  <ataka@milk.freemail.ne.jp>
+
+	* w3m.el (w3m-entity-alist): Support Greek.
+
 2002-10-20  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>
 
 	* w3m.el (w3m-goto-url): Display a help message to stop
